--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="shortcut icon" href="/assets/images/icon.png">
+	<link rel="shortcut icon" href="/assets/images/icons8-r-16 (2).png">
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
